# -heritage-app-mvp

rag/: .dockerignore  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  check_schema.sql  database_schema.sql  docker-compose.yml  env.example  fix_schema.sql  main.py  pyproject.toml  rag_eval_report.json
rag/app/: main.py
rag/app/api/: __init__.py  deps.py  routes.py
rag/app/core/: cache.py  config.py  resilience.py
rag/app/rag/: constants.py  discovery.py  embeddings.py  evaluator.py  indexer.py  llm.py  memory.py  prompts.py  retriever.py  service.py  utils.py  validator.py  vector_store.py
rag/app/schemas/: __init__.py  requests.py  (+1 more)
rag/scratch/: api_test_v6_8.py  check_db.py  check_genesis.py  check_model_env.py  check_qdrant.py  clear_bible_collection.py  create_admin.py  debug_metadata_match.py  diag_retrieval.py  dump_one.py  dump_qdrant.py  e2e_fidelity_test.py  init_indexes.py  inspect_payloads.py  inspect_qdrant.py  inspect_qdrant_raw.py  investigate_gaguide.py  migrate_messages.py  reindex_bible.py  search_bible.py  smoke_test.py  test_bible_parser.py  test_bible_rag.py  test_bible_response.py  test_diag_gemini.py  test_discovery.py  test_discovery_labels.py  test_gen17_automation.py  test_general_retrieval.py  test_genesis_16.py  test_genesis_quote.py  test_logging.py  test_new_key.py  test_num_ga.py  test_qdrant.py  test_query_gen16.py  test_rag_genesis.py  test_retrieval.py  test_unstructured_parser.py  test_v6.py  (+8 more)
rag/scripts/: apply_migration.py  bible_json_to_jsonl.py  create_super_admin.py  evaluate_rag.py  ingest_heritage.py  init_mongo.py  smoke_test.py  supabase_cli_flow.py  test_admin.py  test_delete_pipeline.py  test_upload_pipeline.py
rag/tests/: conftest.py
(+84 files in other folders)
